# flight-deal-finder

./: .env.example  .gitignore  AGENTS.md  CODEBASE_ANALYSIS.md  README.md  TODO.md  pyproject.toml  watchlist.yaml  watchlist.yaml.example
flight_deal_finder/: __init__.py  cli.py  config.py  db.py  engine.py  routes.py
flight_deal_finder/alerts/: __init__.py  channels.py
flight_deal_finder/api/: __init__.py  amadeus.py  flightapi.py
tests/: __init__.py  conftest.py  test_channels.py  test_cli.py  test_config.py  test_db.py  test_engine.py  test_flightapi.py  test_routes.py
