[project]
name = "flight-deal-finder"
version = "0.1.0"
description = "Flight deal finder with personalized price-drop alerts"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
flight-deals = "flight_deal_finder.cli:main"

[tool.setuptools.packages.find]
include = ["flight_deal_finder*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
